# yfinance-market-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/yfinance_mcp/: __init__.py  server.py  utils.py
tests/: test_server.py
