[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yfinance-market-mcp"
version = "0.2.0"
description = "MCP server exposing Yahoo Finance market data via yfinance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "yfinance>=0.2.0",
    "pandas>=1.3.0",
    "numpy>=1.16.5",
]

[project.scripts]
yfinance-mcp = "yfinance_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
